[ATMOSPHERE-161] Add Ceph OSD exporter support
Depends-On: https://github.com/vexxhost/ceph_osd_exporter/pull/4

TODO: release .chart repo.url for ceph osd exporter once it is released
as charts.

Change-Id: Ib12e369388fef60604357aa89375765245052500

--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -239,3 +239,8 @@ horizon_helm_values:
   pod:
     replicas:
       server: 1
+
+ceph_osd_exporter_helm_values:
+  pod:
+    replicas:
+      ceph_osd_exporter: 1
