--- a/playbooks/monitoring.yml
+++ b/playbooks/monitoring.yml
@@ -43,3 +43,7 @@
     - role: prometheus_pushgateway
       tags:
         - prometheus-pushgateway
+
+    - role: ceph_osd_exporter
+      tags:
+        - ceph-osd-exporter
