--- a/roles/kubernetes_node_labels/defaults/main.yml
+++ b/roles/kubernetes_node_labels/defaults/main.yml
@@ -24,4 +24,7 @@ kubernetes_node_labels: |
   {%   set _ = res.update({'openstack-compute-node': 'enabled'}) %}
   {%   set _ = res.update({'openvswitch': 'enabled'}) %}
   {% endif %}
+  {% if inventory_hostname in groups.get('cephs', []) %}
+  {%   set _ = res.update({'ceph-osd-exporter': 'enabled'}) %}
+  {% endif %}
   {{ res }}
