Switch to recommended config
Change-Id: Ie22cb606ea78b6ebdf603d219a4186ac82452ebf

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"],
+  "extends": ["config:recommended"],
   "baseBranches": ["main", "/^stable\\/.*/"],
   "commitBody": "Skip-Release-Notes",
   "prHourlyLimit": 10,
