fix nova ssh private key format issue
Change-Id: If86966bce3c2bbbba26d23ba2d858ee91b40d27c

--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -410,7 +410,7 @@
     - name: Set values for SSH keys
       when: item.path is defined
       ansible.builtin.set_fact:
-        secrets: "{{ secrets | default({}) | combine({item.item: lookup('file', item.path)}) }}"
+        secrets: "{{ secrets | default({}) | combine({item.item: lookup('file', item.path) + '\n'}) }}"
       loop: "{{ _ssh_key_file.results }}"
       loop_control:
         label: "{{ item.item }}"
