--- a/playbooks/kubernetes.yml
+++ b/playbooks/kubernetes.yml
@@ -56,6 +56,7 @@
     haproxy_image: "{{ atmosphere_images['haproxy'] }}"
     containerd_pause_image: "{{ atmosphere_images['pause'] }}"
     kubernetes_image_repository: "{{ atmosphere_images['kube_apiserver'] | vexxhost.kubernetes.docker_image('prefix') }}"
+    kubernetes_version: 1.28.13
     cilium_node_image: "{{ atmosphere_images['cilium_node'] }}"
     cilium_operator_image: "{{ atmosphere_images['cilium_operator'] }}"
     kube_vip_image: "{{ atmosphere_images['kube_vip'] }}"
