Allow uses allocation_pools for openstack.subnet
* Bump openstack ansible collection to 2.4.1
* Bump openstacksdk to 4.2.0

Related: ATMOSPHERE-642

Change-Id: I2ffc11ac3f41c46c53bd4ea24c1fdb135d371262

--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -276,8 +276,9 @@
               - name: public-subnet
                 cidr: 10.96.250.0/24
                 gateway_ip: 10.96.250.10
-                allocation_pool_start: 10.96.250.200
-                allocation_pool_end: 10.96.250.220
+                allocation_pools:
+                  - start: 10.96.250.200
+                    end: 10.96.250.220
                 enable_dhcp: true
 
     - name: Write new Neutron configuration file to disk
