--- a/roles/ironic/tasks/network/create.yml
+++ b/roles/ironic/tasks/network/create.yml
@@ -31,5 +31,6 @@
     network_name: "{{ ironic_bare_metal_subnet_name }}"
     name: "{{ ironic_bare_metal_subnet_name }}"
     cidr: "{{ ironic_bare_metal_subnet_cidr }}"
+    allocation_pool: "{{ ironic_bare_metal_subnet_allocation_pools | default(omit) }}"
     allocation_pool_start: "{{ ironic_bare_metal_subnet_allocation_pool_start | default(omit) }}"
     allocation_pool_end: "{{ ironic_bare_metal_subnet_allocation_pool_end | default(omit) }}"
