--- a/roles/neutron/tasks/main.yml
+++ b/roles/neutron/tasks/main.yml
@@ -97,6 +97,7 @@
         cidr: "{{ item.1.cidr | default(omit) }}"
         gateway_ip: "{{ item.1.gateway_ip | default(omit) }}"
         no_gateway_ip: "{{ item.1.no_gateway_ip | default(omit) }}"
+        allocation_pools: "{{ item.1.allocation_pools | default(omit) }}"
         allocation_pool_start: "{{ item.1.allocation_pool_start | default(omit) }}"
         allocation_pool_end: "{{ item.1.allocation_pool_end | default(omit) }}"
         dns_nameservers: "{{ item.1.dns_nameservers | default(omit) }}"
