Add option to override host in ovn-bgp-agent
Skip-Release-Notes

Change-Id: Ife9164a84efc519540e12470c0c665869ca9ac83
(cherry picked from commit c43197428026fc4d20243914d513b1994362e834)

--- a/charts/ovn/templates/daemonset-ovn-bgp-agent.yaml
+++ b/charts/ovn/templates/daemonset-ovn-bgp-agent.yaml
@@ -61,6 +61,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIP
+            - name: NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
           volumeMounts:
           - name: pod-tmp
             mountPath: /tmp
