Switch to ghcr.io/vexxhost/kubernetes-entrypoint:edge
Skip-Release-Notes

Change-Id: I1d1ea49798a7f400664a0dcbf68f0baa4d05562e

--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -48,7 +48,7 @@ _atmosphere_images:
   csi_rbd_snapshotter: "{{ atmosphere_image_prefix }}registry.k8s.io/sig-storage/csi-snapshotter:v4.2.0"
   db_drop: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/heat:{{ atmosphere_release }}"
   db_init: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/heat:{{ atmosphere_release }}"
-  dep_check: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/kubernetes-entrypoint:{{ atmosphere_release }}"
+  dep_check: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/kubernetes-entrypoint:edge"
   designate_api: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/designate:{{ atmosphere_release }}"
   designate_central: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/designate:{{ atmosphere_release }}"
   designate_db_sync: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/designate:{{ atmosphere_release }}"
