--- a/roles/openstack_exporter/tasks/main.yml
+++ b/roles/openstack_exporter/tasks/main.yml
@@ -72,7 +72,7 @@
                     - default
                     - --collect-metric-time
                     - -d neutron-l3_agent_of_router
-                    - -d loadbalancer-loadbalancer_status
+                    - --disable-service.load-balancer
                   ports:
                     - name: metrics
                       containerPort: 9180
@@ -159,10 +159,10 @@
         labels:
           application: openstack-database-exporter
       stringData:
-        NEUTRON_DSN: "{{ _neutron_db_user.resources.0.data.DB_CONNECTION | b64decode | regex_replace('^.*//', '') | regex_replace('@(.*)/', '@tcp(\\1)/') }}"
-        NOVA_DSN: "{{ _nova_db_user.resources.0.data.DB_CONNECTION | b64decode | regex_replace('^.*//', '') | regex_replace('@(.*)/', '@tcp(\\1)/') }}"
-        NOVA_API_DSN: "{{ _nova_db_user.resources.0.data.DB_CONNECTION | b64decode | regex_replace('^.*//', '') | regex_replace('@(.*)/', '@tcp(\\1)/') }}_api"
-        OCTAVIA_DSN: "{{ _octavia_db_user.resources.0.data.DB_CONNECTION | b64decode | regex_replace('^.*//', '') | regex_replace('@(.*)/', '@tcp(\\1)/') }}"
+        NEUTRON_DATABASE_URL: "{{ _neutron_db_user.resources.0.data.DB_CONNECTION | b64decode | replace('+pymysql', '') }}"
+        NOVA_DATABASE_URL: "{{ _nova_db_user.resources.0.data.DB_CONNECTION | b64decode | replace('+pymysql', '') }}"
+        NOVA_API_DATABASE_URL: "{{ _nova_db_user.resources.0.data.DB_CONNECTION | b64decode | replace('+pymysql', '') }}_api"
+        OCTAVIA_DATABASE_URL: "{{ _octavia_db_user.resources.0.data.DB_CONNECTION | b64decode | replace('+pymysql', '') }}"
 
 - name: Deploy service
   run_once: true
