--- a/charts/frr-k8s/values.yaml
+++ b/charts/frr-k8s/values.yaml
@@ -168,6 +168,9 @@ frrk8s:
     resources: {}
   frrMetrics:
     resources: {}
+  # webhook contains configuration specific to the webhook deployment
+  webhook:
+    nodeSelector: {}
 crds:
   enabled: true
   validationFailurePolicy: Fail
