support scrape percona haproxy metrics
Also add a haproxy grafana dashboard

Fixes #2388

Change-Id: If8338343a08692c5f5590e23b8c02ca1055a0706

--- a/roles/kube_prometheus_stack/tasks/main.yml
+++ b/roles/kube_prometheus_stack/tasks/main.yml
@@ -307,6 +307,8 @@
     state: "{{ item.state }}"
     template: configmap-dashboard.yaml.j2
   loop:
+    - name: haproxy
+      state: present
     - name: goldpinger
       state: present
     - name: node-exporter-full
