--- a/roles/percona_xtradb_cluster/tasks/main.yml
+++ b/roles/percona_xtradb_cluster/tasks/main.yml
@@ -140,3 +140,26 @@
     wait_condition:
       type: ready
       status: true
+
+- name: Create percona haproxy metric service
+  run_once: true
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Service
+      metadata:
+        name: percona-xtradb-haproxy-metrics
+        namespace: openstack
+        labels:
+          name: percona-xtradb-haproxy-metrics
+      spec:
+        ports:
+          - name: metrics
+            port: 8404
+            protocol: TCP
+            targetPort: 8404
+        selector:
+          app.kubernetes.io/component: haproxy
+          app.kubernetes.io/instance: percona-xtradb
+        type: ClusterIP
