Add debug for release note jobs
Change-Id: I147cf045dceca30e484cba6daa97665249187e44

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -22,8 +22,13 @@ jobs:
         id: changed-files
         with:
           dir_names: true
+      - name: List all added files
+        run: |
+          for file in ${{ steps.changed-files.outputs.added_files }}; do
+            echo "$file was added"
+          done
       - uses: actions/github-script@v6
-        if: "!contains(steps.changed-files.outputs.added_files, 'releasenotes/notes/')"
+        if: "!contains(steps.changed-files.outputs.added_files, 'releasenotes/notes')"
         with:
           script: |
             core.setFailed("Pull requests without the 'skip-release-notes' label must add a release note with reno.")
