Use PAT to allow running CI jobs

--- a/.github/workflows/backports.yaml
+++ b/.github/workflows/backports.yaml
@@ -26,4 +26,8 @@ jobs:
       )
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.VEXXHOST_BOT_PAT }}
       - uses: korthout/backport-action@436145e922f9561fc5ea157ff406f21af2d6b363 # v3.2.0
+        with:
+          github_token: ${{ secrets.VEXXHOST_BOT_PAT }}
