--- a/.github/workflows/backports.yaml
+++ b/.github/workflows/backports.yaml
@@ -31,3 +31,4 @@ jobs:
       - uses: korthout/backport-action@436145e922f9561fc5ea157ff406f21af2d6b363 # v3.2.0
         with:
           github_token: ${{ secrets.VEXXHOST_BOT_PAT }}
+          copy_labels_pattern: skip-release-notes
