Add label for renovate

--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
   "baseBranches": ["main", "/^stable\\/.*/"],
-  "commitBody": "Skip-Release-Notes",
+  "addLabels": ["skip-release-notes"],
   "prHourlyLimit": 10,
   "prBodyDefinitions": {
     "OpenDev Links": "[Compare changes](https://opendev.org/{{{depName}}}/compare/{{{currentDigestShort}}}...{{{newDigestShort}}})"
