--- a/.vale.ini
+++ b/.vale.ini
@@ -1,6 +1,7 @@
 StylesPath = .github/styles
 MinAlertLevel = suggestion
 Packages = Microsoft
+Vocab = Base
 
 [*.{rst,yaml}]
 BasedOnStyles = Vale, Microsoft
