--- a/images/octavia/Dockerfile
+++ b/images/octavia/Dockerfile
@@ -11,15 +11,21 @@ RUN git -C /src/octavia fetch --unshallow
 ARG OVN_OCTAVIA_PROVIDER_GIT_REF=5f0b2d89e8c2b3ddf8849c4d7e48325d9304afdc
 ADD --keep-git-dir=true https://opendev.org/openstack/ovn-octavia-provider.git#${OVN_OCTAVIA_PROVIDER_GIT_REF} /src/ovn-octavia-provider
 RUN git -C /src/ovn-octavia-provider fetch --unshallow
-RUN <<EOF bash -xe
-sed -i '/taskflow===.*/d' /upper-constraints.txt
-sed -i '/redis===.*/d' /upper-constraints.txt
-sed -i '/pyOpenSSL===.*/d' /upper-constraints.txt
+ARG REQUIREMENTS_GIT_REF=3a697f8e7a691db0c0a8cef883df130901338182
+ADD --keep-git-dir=true https://opendev.org/openstack/requirements.git#${REQUIREMENTS_GIT_REF} /src/requirements2
+RUN cp /src/requirements2/upper-constraints.txt /upper-constraints2.txt
+RUN <<EOF sh -xe
+sed -i '/glance-store/d' /upper-constraints2.txt
+sed -i '/horizon/d' /upper-constraints2.txt
 EOF
-
+#RUN <<EOF bash -xe
+#sed -i '/taskflow===.*/d' /upper-constraints.txt
+#sed -i '/redis===.*/d' /upper-constraints.txt
+#sed -i '/pyOpenSSL===.*/d' /upper-constraints.txt
+#EOF
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
-    --constraint /upper-constraints.txt \
+    --constraint /upper-constraints2.txt \
         /src/octavia[redis] \
         /src/ovn-octavia-provider
 EOF
