--- a/images/octavia/Dockerfile
+++ b/images/octavia/Dockerfile
@@ -7,10 +7,15 @@ FROM openstack-venv-builder AS build
 ARG OCTAVIA_GIT_REF=ba397f07a7331190208c93368ee23826ac4e2707
 ADD --keep-git-dir=true https://opendev.org/openstack/octavia.git#${OCTAVIA_GIT_REF} /src/octavia
 RUN git -C /src/octavia fetch --unshallow
+COPY patches/octavia /patches/octavia
+RUN git -C /src/octavia apply --verbose /patches/octavia/*
 # renovate: name=openstack/ovn-octavia-provider repo=https://opendev.org/openstack/ovn-octavia-provider.git branch=unmaintained/2023.1
 ARG OVN_OCTAVIA_PROVIDER_GIT_REF=2564f92911840664df8a424697e7c7c8dd9c9865
 ADD --keep-git-dir=true https://opendev.org/openstack/ovn-octavia-provider.git#${OVN_OCTAVIA_PROVIDER_GIT_REF} /src/ovn-octavia-provider
 RUN git -C /src/ovn-octavia-provider fetch --unshallow
+RUN <<EOF bash -xe
+ sed -i 's/taskflow===.*/taskflow===5.5.0/g' /upper-constraints.txt
+EOF
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
     --constraint /upper-constraints.txt \
