Use long commit for renovate comapre

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
   ],
   "prHourlyLimit": 10,
   "prBodyDefinitions": {
-    "OpenDev Links": "[Compare changes](https://opendev.org/{{{depName}}}/compare/{{{currentDigestShort}}}...{{{newDigestShort}}})"
+    "OpenDev Links": "[Compare changes](https://opendev.org/{{{depName}}}/compare/{{{currentDigest}}}...{{{newDigest}}})"
   },
   "packageRules": [
     {
