Update main branch once a week

--- a/renovate.json
+++ b/renovate.json
@@ -76,6 +76,16 @@
         "!images/tempest/Dockerfile"
       ],
       "groupName": "openstack"
+    },
+    {
+      "matchDatasources": [
+        "git-refs"
+      ],
+      "matchPackageNames": [
+        "https://opendev.org/openstack/**"
+      ],
+      "matchBaseBranches": ["main"],
+      "schedule": ["* * * * 1"]
     }
   ],
   "customManagers": [
