Update tempest on Mondays

--- a/renovate.json
+++ b/renovate.json
@@ -63,7 +63,8 @@
       "matchFileNames": [
         "images/tempest/Dockerfile"
       ],
-      "groupName": "tempest"
+      "groupName": "tempest",
+      "schedule": ["* * * * 1"]
     },
     {
       "matchDatasources": [
