--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -143,6 +143,9 @@ nova_helm_values:
         debug: "{{ lookup('env', 'ATMOSPHERE_DEBUG') | default('false', True) }}"
         osapi_compute_workers: 2
         metadata_workers: 2
+      libvirt:
+        swtpm_enabled: false
+        virt_type: qemu
       conductor:
         workers: 2
       scheduler:
