--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -12,66 +12,66 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-- project:
-    check:
-      jobs:
-        - atmosphere-cargo-test
-        - atmosphere-chart-vendor
-        - atmosphere-golang-go-test
-        - atmosphere-linters
-        - atmosphere-tox-promtool-test
-        - atmosphere-tox-helm-unittest
-        - atmosphere-tox-py3
-        - atmosphere-build-images
-        - atmosphere-build-collection:
-            dependencies: &image_build_jobs
-              - name: atmosphere-build-images
-                soft: true
-        - atmosphere-molecule-aio-keycloak:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-openvswitch:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-ovn:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-ovn-bgp-agent:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-csi-local-path-provisioner:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-csi-rbd:
-            dependencies: *image_build_jobs
-    gate:
-      jobs:
-        - atmosphere-cargo-test
-        - atmosphere-chart-vendor
-        - atmosphere-golang-go-test
-        - atmosphere-linters
-        - atmosphere-tox-py3
-        - atmosphere-build-images
-        - atmosphere-build-collection:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-keycloak:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-openvswitch:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-ovn:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-ovn-bgp-agent:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-csi-local-path-provisioner:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-csi-rbd:
-            dependencies: *image_build_jobs
-    release:
-      jobs:
-        - atmosphere-publish-collection
-    promote:
-      jobs:
-        - atmosphere-promote-images
-    periodic:
-      jobs:
-        - atmosphere-molecule-aio-upgrade-openvswitch:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-upgrade-ovn:
-            dependencies: *image_build_jobs
-    vars:
-      container_registry: harbor.atmosphere.dev/library
+# - project:
+#     check:
+#       jobs:
+#         - atmosphere-cargo-test
+#         - atmosphere-chart-vendor
+#         - atmosphere-golang-go-test
+#         - atmosphere-linters
+#         - atmosphere-tox-promtool-test
+#         - atmosphere-tox-helm-unittest
+#         - atmosphere-tox-py3
+#         - atmosphere-build-images
+#         - atmosphere-build-collection:
+#             dependencies: &image_build_jobs
+#               - name: atmosphere-build-images
+#                 soft: true
+#         - atmosphere-molecule-aio-keycloak:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-aio-openvswitch:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-aio-ovn:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-aio-ovn-bgp-agent:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-csi-local-path-provisioner:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-csi-rbd:
+#             dependencies: *image_build_jobs
+#     gate:
+#       jobs:
+#         - atmosphere-cargo-test
+#         - atmosphere-chart-vendor
+#         - atmosphere-golang-go-test
+#         - atmosphere-linters
+#         - atmosphere-tox-py3
+#         - atmosphere-build-images
+#         - atmosphere-build-collection:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-aio-keycloak:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-aio-openvswitch:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-aio-ovn:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-aio-ovn-bgp-agent:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-csi-local-path-provisioner:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-csi-rbd:
+#             dependencies: *image_build_jobs
+#     release:
+#       jobs:
+#         - atmosphere-publish-collection
+#     promote:
+#       jobs:
+#         - atmosphere-promote-images
+#     periodic:
+#       jobs:
+#         - atmosphere-molecule-aio-upgrade-openvswitch:
+#             dependencies: *image_build_jobs
+#         - atmosphere-molecule-aio-upgrade-ovn:
+#             dependencies: *image_build_jobs
+#     vars:
+#       container_registry: harbor.atmosphere.dev/library
