--- a/.github/styles/Microsoft/Acronyms.yml
+++ b/.github/styles/Microsoft/Acronyms.yml
@@ -9,13 +9,21 @@ second: '(?:\b[A-Z][a-z]+ )+\(([A-Z]{3,5})\)'
 # ... with the exception of these:
 exceptions:
   - API
+  - ASAP
   - ASP
+  - BGP
   - CLI
+  - CORS
   - CPU
+  - CSI
   - CSS
   - CSV
+  - CVE
   - DEBUG
+  - DHCP
+  - DNS
   - DOM
+  - DPDK
   - DPI
   - FAQ
   - GCC
@@ -27,37 +35,48 @@ exceptions:
   - HTML
   - HTTP
   - HTTPS
+  - IBM
   - IDE
   - JAR
   - JSON
   - JSX
+  - LDAP
   - LESS
   - LLDB
   - NET
+  - NIC
   - NOTE
   - NVDA
+  - NVME
   - OSS
+  - OVS
   - PATH
   - PDF
   - PHP
   - POST
+  - QEMU
   - RAM
+  - RBD
   - REPL
   - RSA
   - SCM
   - SCSS
   - SDK
+  - SHELL
   - SQL
   - SSH
   - SSL
   - SVG
   - TBD
   - TCP
+  - TLS
   - TODO
+  - TPM
   - URI
   - URL
   - USB
   - UTF
+  - WSGI
   - XML
   - XSS
   - YAML
