--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,3 +16,28 @@ jobs:
         with:
           fetch-depth: 0
       - uses: ./.github/actions/build
+
+  images:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: tj-actions/changed-files@ed68ef82c095e0d48ec87eccea555d944a631a4c # v46
+        id: changed-files
+        with:
+          files: |
+            .github/workflows/ci.yaml
+            ^images/
+            docker-bake.hcl
+      - uses: depot/setup-action@v1
+        if: steps.changed-files.outputs.any_modified == 'true'
+      - uses: depot/bake-action@v1
+        id: bake
+        if: steps.changed-files.outputs.any_modified == 'true'
+        with:
+          project: jd10vkmkwv
+          save: true
+    outputs:
+      metadata: ${{ steps.bake.outputs.metadata }}
