Switch to chart-vendor action

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,12 @@ on:
 permissions: {}
 
 jobs:
+  chart-vendor:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+      - uses: vexxhost/chart-vendor@21eda00a70cf5892f377a19a42dff89f4f474539
+
   build:
     runs-on: ubuntu-latest
     steps:
