--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
-      - uses: vexxhost/chart-vendor@ff38c6c63b46bcd61a98842ed65cc480ff98c29c
+      - uses: vexxhost/chart-vendor@4915827d431a5e7b639c37e56cc5db44015ebdf4 # main
 
   build:
     runs-on: ubuntu-latest
