ci: switch rust to gha

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,11 @@ on:
 permissions: {}
 
 jobs:
+  cargo:
+    uses: vexxhost/github-actions/.github/workflows/cargo.yml@d240297ac3f2162871403fea1074360da43d4585 # main
+    with:
+      install-promtool: true
+
   chart-vendor:
     runs-on: ubuntu-latest
     steps:
