--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: "^(roles/kube_prometheus_stack/files/jsonnet|charts|plugins/modules/subnet.py|.github)"
+exclude: "^(roles/kube_prometheus_stack/files/jsonnet|charts|plugins/modules/subnet.py)"
 
 repos:
   - repo: local
@@ -21,6 +21,8 @@ repos:
     hooks:
       - id: end-of-file-fixer
         exclude: ^images/.*/patches/.*\.patch$
+      - id: file-contents-sorter
+        files: ^.github/styles/config/vocabularies/Base/accept.txt$
       - id: trailing-whitespace
         exclude: ^images/.*/patches/.*\.patch$
 
