ci: switch linters to gha (#2592)
(cherry picked from commit a624cac868be238c31519a359106af2f9d848db6)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: "^(roles/kube_prometheus_stack/files/jsonnet|charts|.github)"
+exclude: "^(roles/kube_prometheus_stack/files/jsonnet|charts)"
 
 repos:
   - repo: local
@@ -21,6 +21,8 @@ repos:
     hooks:
       - id: end-of-file-fixer
         exclude: ^images/.*/patches/.*\.patch$
+      - id: file-contents-sorter
+        files: ^.github/styles/config/vocabularies/Base/accept.txt$
       - id: trailing-whitespace
         exclude: ^images/.*/patches/.*\.patch$
 
