chore: add charts.yml to renovate

--- a/renovate.json
+++ b/renovate.json
@@ -134,6 +134,15 @@
       "depNameTemplate": "neutron-policy-server",
       "packageNameTemplate": "https://review.vexxhost.dev/neutron-policy-server",
       "currentValueTemplate": "main"
+    },
+    {
+      "customType": "jsonata",
+      "fileFormat": "yaml",
+      "managerFilePatterns": [".charts.yml"],
+      "matchStrings": [
+        "charts.{ \"depName\": name, \"currentValue\": version, \"registryUrl\": repository.url }",
+      ],
+      "datasourceTemplate": "helm"
     }
   ]
 }
