chore(renovate): use fileMatch

--- a/renovate.json
+++ b/renovate.json
@@ -138,7 +138,7 @@
     {
       "customType": "jsonata",
       "fileFormat": "yaml",
-      "managerFilePatterns": [".charts.yml"],
+      "fileMatch": [".charts.yml"],
       "matchStrings": [
         "charts.{ \"depName\": name, \"currentValue\": version, \"registryUrl\": repository.url }",
       ],
