chore(renovate): fix currentValue

--- a/renovate.json
+++ b/renovate.json
@@ -154,7 +154,7 @@
       "customType": "jsonata",
       "fileFormat": "yaml",
       "fileMatch": ["roles/percona_xtradb_cluster/vars/main.yml"],
-      "matchStrings": ["_percona_xtradb_cluster_spec.{ \"version\": crVersion }"],
+      "matchStrings": ["_percona_xtradb_cluster_spec.{ \"currentValue\": crVersion }"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "percona/percona-xtradb-cluster-operator"
     }
