--- a/renovate.json
+++ b/renovate.json
@@ -172,7 +172,8 @@
       "fileMatch": ["roles/percona_xtradb_cluster/vars/main.yml"],
       "matchStrings": ["_percona_xtradb_cluster_spec.{ \"currentValue\": crVersion }"],
       "datasourceTemplate": "github-releases",
-      "depNameTemplate": "percona/percona-xtradb-cluster-operator"
+      "depNameTemplate": "percona/percona-xtradb-cluster-operator",
+      "extractVersion": "^v(?<version>.*)$"
     }
   ]
 }
