--- a/renovate.json
+++ b/renovate.json
@@ -100,6 +100,10 @@
         "pxc-operator",
         "quay.io/prometheus/mysqld-exporter"
       ]
+    },
+    {
+      "matchPackageNames": ["percona/percona-xtradb-cluster-operator"],
+      "extractVersion": "^v(?<version>.*)$"
     }
   ],
   "customManagers": [
@@ -172,8 +176,7 @@
       "fileMatch": ["roles/percona_xtradb_cluster/vars/main.yml"],
       "matchStrings": ["_percona_xtradb_cluster_spec.{ \"currentValue\": crVersion }"],
       "datasourceTemplate": "github-releases",
-      "depNameTemplate": "percona/percona-xtradb-cluster-operator",
-      "extractVersion": "^v(?<version>.*)$"
+      "depNameTemplate": "percona/percona-xtradb-cluster-operator"
     }
   ]
 }
