chore(renovate): switch pxc to semver

--- a/renovate.json
+++ b/renovate.json
@@ -104,6 +104,10 @@
     {
       "matchPackageNames": ["percona/percona-xtradb-cluster-operator"],
       "extractVersion": "^v(?<version>.*)$"
+    },
+    {
+      "matchPackageNames": ["docker.io/percona/percona-xtradb-cluster"],
+      "versioning": "semver"
     }
   ],
   "customManagers": [
