chore(renovate): use semver-coerced for pxc

--- a/renovate.json
+++ b/renovate.json
@@ -107,7 +107,7 @@
     },
     {
       "matchPackageNames": ["docker.io/percona/percona-xtradb-cluster"],
-      "versioning": "semver"
+      "versioning": "semver-coerced"
     }
   ],
   "customManagers": [
