chore(renovate): split minor/patch prs

--- a/renovate.json
+++ b/renovate.json
@@ -107,7 +107,8 @@
     },
     {
       "matchPackageNames": ["docker.io/percona/percona-xtradb-cluster"],
-      "versioning": "semver-coerced"
+      "versioning": "semver-coerced",
+      "separateMinorPatch": true
     }
   ],
   "customManagers": [
