chore(renovate): add gomod

--- a/renovate.json
+++ b/renovate.json
@@ -96,6 +96,7 @@
         "docker.io/percona/haproxy",
         "docker.io/percona/percona-xtradb-cluster-operator",
         "docker.io/percona/percona-xtradb-cluster",
+        "github.com/percona/percona-xtradb-cluster-operator",
         "percona/percona-xtradb-cluster-operator",
         "pxc-operator",
         "quay.io/prometheus/mysqld-exporter"
