--- a/renovate.json
+++ b/renovate.json
@@ -23,6 +23,10 @@
     },
     {
       "enabled": true,
+      "matchDatasources": ["gomod", "git-refs"]
+    },
+    {
+      "enabled": true,
       "matchFileNames": [
         "docker-bake.hcl"
       ]
@@ -34,12 +38,6 @@
       ],
       "matchPackageNames": [
         "magnum-cluster-api"
-      ]
-    },
-    {
-      "enabled": true,
-      "matchDatasources": [
-        "git-refs"
       ]
     },
     {
