--- a/renovate.json
+++ b/renovate.json
@@ -23,7 +23,11 @@
     },
     {
       "enabled": true,
-      "matchDatasources": ["gomod", "git-refs"]
+      "matchDatasources": ["git-refs"]
+    },
+    {
+      "enabled": true,
+      "matchManagers": ["gomod"]
     },
     {
       "enabled": true,
