chore(renovate): group all gomod minor/patch updates

--- a/renovate.json
+++ b/renovate.json
@@ -30,6 +30,11 @@
       "matchManagers": ["gomod"]
     },
     {
+      "matchManagers": ["gomod"],
+      "groupName": "golang",
+      "matchUpdateTypes": ["minor", "patch"]
+    },
+    {
       "enabled": true,
       "matchFileNames": [
         "docker-bake.hcl"
