--- a/renovate.json
+++ b/renovate.json
@@ -23,11 +23,7 @@
     },
     {
       "enabled": true,
-      "matchDatasources": ["git-refs"]
-    },
-    {
-      "enabled": true,
-      "matchManagers": ["gomod"]
+      "matchDatasources": ["crate", "git-refs", "gomod"]
     },
     {
       "matchManagers": ["gomod"],
