Revert "chore(renovate): enable crate updates"
This reverts commit 9e690244d59adc568855bfe0224d9d92c2ae5094.

--- a/renovate.json
+++ b/renovate.json
@@ -23,7 +23,11 @@
     },
     {
       "enabled": true,
-      "matchDatasources": ["crate", "git-refs", "gomod"]
+      "matchDatasources": ["git-refs"]
+    },
+    {
+      "enabled": true,
+      "matchManagers": ["gomod"]
     },
     {
       "matchManagers": ["gomod"],
