chore(renovate): enable cargo manager

--- a/renovate.json
+++ b/renovate.json
@@ -27,7 +27,7 @@
     },
     {
       "enabled": true,
-      "matchManagers": ["gomod"]
+      "matchManagers": ["cargo", "gomod"]
     },
     {
       "matchManagers": ["gomod"],
